Added hover effect for a tag and added click value

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,6 +46,10 @@ html{
     display: block;
 }
 
+.dropdown-content a:hover{
+    color: cadetblue;
+}
+
 .dropdown:hover .dropdown-content{
     display: block;
 }
